Organização de pastas, modificando abertura de outros sites em novas abas

--- a/pages/eventos2.html
+++ b/pages/eventos2.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
         <title>Forfun - Eventos</title>
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
 
         <div id="eventosprox">
             <div id="eventosImg">
-                <img src="img/Fotos/ForfunShowAg.png" alt="Foto Show Forfun">
+                <img src="../img/Fotos/ForfunShowAg.png" alt="Foto Show Forfun">
             </div>
             <div id="shows">
                 <h2> Próximos shows </h2>
@@ -38,34 +38,34 @@
                     <tr>
                         <td>21/03/2021</td>
                         <td>São Paulo - SP</td>
-                        <th><a href="https://www.grupotombrasil.com.br/"><u>Tom Brasil</u> &ShortRightArrow;</a></th>
+                        <th><a href="https://www.grupotombrasil.com.br/" target="_blank"><u>Tom Brasil</u> &ShortRightArrow;</a></th>
                     </tr>
                     <tr>
                         <td>27/03/2021</td>
                         <td>Rio de Janeiro - RJ</td>
-                        <th><a href="https://www.circovoador.com.br/"><u>Circo Voador</u> &ShortRightArrow;</a></th>
+                        <th><a href="https://www.circovoador.com.br/" target="_blank"><u>Circo Voador</u> &ShortRightArrow;</a></th>
 
                     </tr>
                     <tr>
                         <td>16/04/2021</td>
                         <td>Belo Horizonte - MG</td>
-                        <th><a href="https://www.soubh.com.br/estabelecimentos/casas-noturnas/music-hall"><u>Music Hall</u> &ShortRightArrow;</a></th>
+                        <th><a href="https://www.soubh.com.br/estabelecimentos/casas-noturnas/music-hall" target="_blank"><u>Music Hall</u> &ShortRightArrow;</a></th>
 
                     </tr>
                     <tr>
                         <td>22/04/2021</td>
                         <td>Porto Alegre - RS</td>
-                        <th><a href="http://www.pepsionstage.com.br/"><u>Pepsi On Stage</u> &ShortRightArrow;</a></th>
+                        <th><a href="http://www.pepsionstage.com.br/" target="_blank"><u>Pepsi On Stage</u> &ShortRightArrow;</a></th>
                     </tr>
                     <tr>
                         <td>28/04/2021</td>
                         <td>Salvador - BA</td>
-                        <th><a href="https://festaseshows.com.br/locais/oba-oba-music-hall-em-pituacu-salvador/"><u>Oba Oba Music Hall</u> &ShortRightArrow;</a></th>
+                        <th><a href="https://festaseshows.com.br/locais/oba-oba-music-hall-em-pituacu-salvador/" target="_blank"><u>Oba Oba Music Hall</u> &ShortRightArrow;</a></th>
                     </tr>
                     <tr>
                         <td>12/05/2021</td>
                         <td>Campo Grande - MS</td>
-                        <th><a href="https://applocal.com.br/empresa/hangar-live-music/campo-grande/ms/11407018"><u>Hangar Live Music</u> &ShortRightArrow;</a></th>
+                        <th><a href="https://applocal.com.br/empresa/hangar-live-music/campo-grande/ms/11407018" target="_blank"><u>Hangar Live Music</u> &ShortRightArrow;</a></th>
 
                     </tr>
                 </table>
@@ -74,12 +74,12 @@
 
         <footer class="Footer">
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+       <script src="../script/script.js"></script> 
     </body>
 </html>
