--- a/pages/index.html
+++ b/pages/index.html
@@ -3,15 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" media="screen and (max-width: 760px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 1200px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 760px) and (max-width: 1200px)" href="style.css">
-        <!--<link rel="stylesheet" href="widescreen.css">-->
+        <link rel="stylesheet" media="screen and (max-width: 760px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 1200px)" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 760px) and (max-width: 1200px)" href="../styles/style.css">
         <title>Forfun - Página Inicial</title>
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -25,7 +24,7 @@
         </header>
 
         <div id="banner">
-            <img src="img/Fotos/Forfun1.jpg">
+            <img src="../img/Fotos/Forfun1.jpg">
         </div>
 
         <div id="sections">
@@ -82,7 +81,7 @@
                 tiveram sua primeira experiência com gravação em estúdio.
                 <a href="#forfunInicial" id="verMais" onClick="verMais()"><u>Ver mais</u></a>
             </p>
-            <div  id="verMaisForfun">
+            <div id="verMaisForfun">
                 <p>
                     Iniciada como um trio, no ano de 2001, a banda Forfun é composta 
                     por Danilo Cutrim na guitarra e vocal, Vitor Isensee no baixo e 
@@ -111,12 +110,12 @@
 
         <footer>
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-  <!--  <script src="script.js"></script> -->   
+        <script src="../script/script.js"></script>  
     </body>
 </html>
