--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
         <title>Forfun - Produtos</title>
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
                 <div>
                     <div class="div1">
                         <p>Camiseta Alegria Compartilhada - Branca</p>
-                        <img src="img/Camisetas/CamisetaAlegriaCompartilhada.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhada.png" alt="Camiseta Alegria Compartilhada">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">M</button>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="div2">
                         <p>Camiseta Alegria Compartilhada - Branca</p>
-                        <img src="img/Camisetas/CamisetaAlegriaCompartilhada2.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhada2.png" alt="Camiseta Alegria Compartilhada">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">M</button>
@@ -59,7 +59,7 @@
                 <div>
                     <div class="div1">
                         <p>Camiseta Alegria Compartilhada - Preta</p>
-                        <img src="img/Camisetas/CamisetaAlegriaCompartilhadaPreta.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhadaPreta.png" alt="Camiseta Alegria Compartilhada">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">G</button>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="div2">
                         <p>Camiseta Alegria Compartilhada - Preta</p>
-                        <img src="img/Camisetas/CamisetaAlegriaCompartilhadaPreta2.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhadaPreta2.png" alt="Camiseta Alegria Compartilhada">
                         <div class="produtosLine">
                             <button class="tamanhos">PP</button>
                             <button class="tamanhos">M</button>
@@ -83,7 +83,7 @@
                 <div>
                     <div class="div1">
                         <p>Camiseta Básica - Verde</p>
-                        <img src="img/Camisetas/CamisetaForfunVerde.png" alt="Camiseta Forfun">
+                        <img src="../img/Camisetas/CamisetaForfunVerde.png" alt="Camiseta Forfun">
                         <div class="produtosLine">
                             <button class="tamanhos">PP</button>
                             <button class="tamanhos">M</button>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="div2">
                         <p>Camiseta Nu - Branca</p>
-                        <img src="img/Camisetas/CamisetaNu.png" alt="Camiseta Nu">
+                        <img src="../img/Camisetas/CamisetaNu.png" alt="Camiseta Nu">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">M</button>
@@ -109,12 +109,12 @@
 
         <footer>
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+       <script src="../script/script.js"></script> 
     </body>
 </html>
