--- a/pages/quemSomos.html
+++ b/pages/quemSomos.html
@@ -6,12 +6,12 @@
         <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
         <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
         <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">-->
-        <link rel="stylesheet" href="widescreen.css">
+        <link rel="stylesheet" href="../styles/widescreen.css">
         <title>Forfun - Quem Somos</title>
     </head>
     <body>
         <header id="headerQuemS">
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
                 <h3>Danilo Cutrim</h3>
                 <p>Vocal e Guitarra</p>
                 <hr>
-                <a href="https://www.instagram.com/danilo_cutrim/"><img src="img/Contato/InstaBranco.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/danilo_cutrim/" target="_blank"><img src="../img/Contato/InstaBranco.png" alt="Instagram"></a>
             </div>
             <div id="quemSomosB">
               <h3>Nicolas Christ</h3>
@@ -41,24 +41,24 @@
                 <h3>Vitor Isensee</h3>
                 <p>Guitarra, Teclado e Vocal</p>
                 <hr>
-                <a href="https://www.instagram.com/izenzee/""><img src="img/Contato/InstaBranco.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/izenzee/" target="_blank"><img src="../img/Contato/InstaBranco.png" alt="Instagram"></a>
             </div>
             <div id="quemSomosD">
                 <h3>Rodrigo Costa</h3>
                 <p>Vocal e Baixo</p>
                 <hr>
-                <a href="https://www.instagram.com/rodcostamusic/"><img src="img/Contato/InstaBranco.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/rodcostamusic/" target="_blank"><img src="../img/Contato/InstaBranco.png" alt="Instagram"></a>
             </div>
         </div>
 
         <footer>
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+       <script src="../script/script.js"></script> 
     </body>
 </html>
