--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -3,15 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">-->
-        <link rel="stylesheet" href="widescreen.css">
+        <!--
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
+        -->
+        <link rel="stylesheet" href="../styles/widescreen.css">
         <title>Forfun - Página Inicial</title>
     </head>
     <body>
         <header id="headerDisco">
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -26,34 +28,34 @@
 
         <div class="discografia">
             <div id="CDA">
-                <a href="https://www.youtube.com/watch?v=UngdqF73Bho">
+                <a href="https://www.youtube.com/watch?v=UngdqF73Bho" target="_blank">
                     <p>Das Pistas de Skate às Pistas de Dança</p>
                 </a>
             </div>
             <div id="CDB">
-                <a href="https://www.youtube.com/watch?v=j6-aZffhkqY">
+                <a href="https://www.youtube.com/watch?v=j6-aZffhkqY" target="_blank">
                     <p>Teoria Dinâmica</p>
                 </a>
             </div>
             <div id="CDC">
-                <a href="https://www.youtube.com/watch?v=F_pWOaqtcLo">
+                <a href="https://www.youtube.com/watch?v=F_pWOaqtcLo" target="_blank">
                     <p>Polisenso</p>
                 </a>
             </div>
         </div>
         <div class="discografia">
             <div id="CDE">
-                <a href="https://www.youtube.com/watch?v=V4NVlqO6uCg">
+                <a href="https://www.youtube.com/watch?v=V4NVlqO6uCg" target="_blank">
                     <p>Alegria Compartilhada</p>
                 </a>
             </div>
             <div id="CDF">
-                <a href="https://www.youtube.com/watch?v=SCNYrvTS1v4">
+                <a href="https://www.youtube.com/watch?v=SCNYrvTS1v4" target="_blank">
                     <p>Ao Vivo no Disco Voador</p>
                 </a>
             </div>
             <div id="CDG">
-                <a href="https://www.youtube.com/watch?v=5QFvqhZf2Y8&t=3s">
+                <a href="https://www.youtube.com/watch?v=5QFvqhZf2Y8&t=3s" target="_blank">
                     <p>Nu</p>
                 </a>
             </div>
@@ -61,12 +63,12 @@
 
         <footer id="footerDisco">
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+       <script src="../script/script.js"></script> 
     </body>
 </html>
