--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
         <title>Forfun - Eventos</title>
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
         </header>
 
         <div id="forfunBG">
-            <img src="img/Fotos/ForfunBG.png" alt="Foto da banda">
+            <img src="../img/Fotos/ForfunBG.png" alt="Foto da banda">
         </div>
         <div id="eventos">
             <a href="eventos1.html" id="eventosA"><p>Eventos anteriores</p></a>
@@ -33,12 +33,12 @@
 
         <footer class="Footer">
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+       <script src="../script/script.js"></script> 
     </body>
 </html>
