--- a/pages/produtosB.html
+++ b/pages/produtosB.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
         <title>Forfun - Produtos</title>
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
                 <div>
                     <div class="div1">
                         <p>Boné Forfun - Branco e Preto</p>
-                        <img src="img/Bone/BoneForfun.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Bone/BoneForfun.png" alt="Camiseta Alegria Compartilhada">
                         <div class="bones">
                             <button class="comprar">COMPRAR</button>
                             <p class="preco">R$21,99</p>
@@ -44,7 +44,7 @@
 
                     <div class="div2">
                         <p>Boné Forfun - Preto</p>
-                        <img src="img/Bone/BoneForfunPreto.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Bone/BoneForfunPreto.png" alt="Camiseta Alegria Compartilhada">
                         <div class="bones">
                             <button class="comprar">COMPRAR</button>
                             <p class="preco">R$25,99</p>
@@ -56,12 +56,12 @@
         
         <footer class="Footer">
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+       <script src="../script/script.js"></script> 
     </body>
 </html>
