--- a/pages/produtosC.html
+++ b/pages/produtosC.html
@@ -6,12 +6,12 @@
         <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
         <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
         <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">-->
-        <link rel="stylesheet" href="widescreen.css">
+        <link rel="stylesheet" href="../styles/widescreen.css">
         <title>Forfun - Produtos</title>
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="img/Forfunlogo.png"></a>
+            <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
             <div class="todosProdutos">
                 <div id="caneca">   
                     <p>Caneca Forfun</p>
-                    <img src="img/Caneca/CanecaForfun.png" alt="CanecaForfun">
+                    <img src="../img/Caneca/CanecaForfun.png" alt="CanecaForfun">
                     <div class="produtosLine">
                         <br><button class="comprar">COMPRAR</button>
                         <p class="preco">R$12,99</p>
@@ -44,14 +44,14 @@
             </div>
         </div>
 
-        <footer>
+        <footer class="Footer">
             <p>&copy 2020</p>
-            <a href="https://www.instagram.com/forfunoficial"><img src="img/Contato/Instagram.png"></a>
-            <a href="https://twitter.com/forfunoficial"><img src="img/Contato/Twitter.png"></a>
-            <a href="https://pt-br.facebook.com/ForfunOficial/"><img src="img/Contato/Facebook.png"></a>
-            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA"><img src="img/Contato/Youtube.png"></a>
+            <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
+            <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
+            <a href="https://pt-br.facebook.com/ForfunOficial/" target="_blank"><img src="../img/Contato/Facebook.png"></a>
+            <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-       <script src="script.js"></script> 
+       <script src="../script/script.js"></script> 
     </body>
 </html>
