--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <a href="index.html"><img src="../img/Forfunlogo.png"></a>
-            <nav>
+            <nav class="wid">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="quemSomos.html">Quem Somos</a></li>
@@ -19,6 +19,20 @@
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="eventos.html">Eventos</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+            <nav class="mob">
+                <ul>
+                    <li> <a href="#">&#9776;</a> 
+                        <ul>
+                            <hr><li><a href="index.html">Home</a></li>
+                            <hr><li><a href="quemSomos.html">Quem Somos</a></li>
+                            <hr><li><a href="discografia.html">Discografia</a></li>
+                            <hr><li><a href="produtos.html">Produtos</a></li>
+                            <hr><li><a href="eventos.html">Eventos</a></li>
+                            <hr><li><a href="contato.html">Contato</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </header>
