--- a/pages/produtosC.html
+++ b/pages/produtosC.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="style.css">-->
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
         <link rel="stylesheet" href="../styles/widescreen.css">
         <title>Forfun - Produtos</title>
     </head>
     <body>
         <header>
             <a href="index.html"><img src="../img/Forfunlogo.png"></a>
-            <nav>
+            <nav class="wid">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="quemSomos.html">Quem Somos</a></li>
@@ -20,6 +19,20 @@
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="eventos.html">Eventos</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+            <nav class="mob">
+                <ul>
+                    <li> <a href="#">&#9776;</a> 
+                        <ul>
+                            <hr><li><a href="index.html">Home</a></li>
+                            <hr><li><a href="quemSomos.html">Quem Somos</a></li>
+                            <hr><li><a href="discografia.html">Discografia</a></li>
+                            <hr><li><a href="produtos.html">Produtos</a></li>
+                            <hr><li><a href="eventos.html">Eventos</a></li>
+                            <hr><li><a href="contato.html">Contato</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </header>
