Página de contato responsiva

--- a/pages/index.html
+++ b/pages/index.html
@@ -130,6 +130,6 @@
             <a href="https://www.youtube.com/channel/UCG2dP282Bn5hS-jB7jDcyEA" target="_blank"><img src="../img/Contato/Youtube.png"></a>
         </footer>
         
-  <!--     <script src="../script/script.js"></script> -->  
+       <script src="../script/script.js"></script> 
     </body>
 </html>
