--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -3,14 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
+        <link rel="stylesheet" media="screen and (max-width: 900px)" href="../styles/smallscreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 901px)" href="../styles/widescreen.css">
         
-        <title>Forfun - Página Inicial</title>
+        <title>Forfun - Discografia</title>
     </head>
-    <body>
-        <header>
+    <body> 
+        <header> <!--Retornar-->
             <a href="index.html"><img src="../img/Forfunlogo.png"></a>
             <nav class="wid">
                 <ul>
