Quem somos responsivo

--- a/pages/quemSomos.html
+++ b/pages/quemSomos.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
-        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
+        <link rel="stylesheet" media="screen and (min-width: 1201px)" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 1200px)" href="../styles/style.css">
         <title>Forfun - Quem Somos</title>
     </head>
     <body>
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <footer>
+        <footer id="footerQuemSomos">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
