--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -38,7 +38,7 @@
         </header>
 
         <div class="produtos">
-            <div class="itens">
+            <div class="itens itensMin">
                 <ul>
                     <li><a href="produtos.html" class="produtoSelecionado">Camisetas</a></li> <hr>
                     <li><a href="produtosC.html">Canecas</a></li> <hr>
@@ -49,7 +49,7 @@
                 <div>
                     <div class="div1">
                         <p>Camiseta Alegria Compartilhada - Branca</p>
-                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhada.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhada.png" alt="Camiseta Alegria Compartilhada" class="fotos">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">M</button>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="div2">
                         <p>Camiseta Alegria Compartilhada - Branca</p>
-                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhada2.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhada2.png" alt="Camiseta Alegria Compartilhada" class="fotos">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">M</button>
@@ -73,7 +73,7 @@
                 <div>
                     <div class="div1">
                         <p>Camiseta Alegria Compartilhada - Preta</p>
-                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhadaPreta.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhadaPreta.png" alt="Camiseta Alegria Compartilhada" class="fotos">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">G</button>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="div2">
                         <p>Camiseta Alegria Compartilhada - Preta</p>
-                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhadaPreta2.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Camisetas/CamisetaAlegriaCompartilhadaPreta2.png" alt="Camiseta Alegria Compartilhada" class="fotos">
                         <div class="produtosLine">
                             <button class="tamanhos">PP</button>
                             <button class="tamanhos">M</button>
@@ -97,7 +97,7 @@
                 <div>
                     <div class="div1">
                         <p>Camiseta Básica - Verde</p>
-                        <img src="../img/Camisetas/CamisetaForfunVerde.png" alt="Camiseta Forfun">
+                        <img src="../img/Camisetas/CamisetaForfunVerde.png" alt="Camiseta Forfun" class="fotos">
                         <div class="produtosLine">
                             <button class="tamanhos">PP</button>
                             <button class="tamanhos">M</button>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="div2">
                         <p>Camiseta Nu - Branca</p>
-                        <img src="../img/Camisetas/CamisetaNu.png" alt="Camiseta Nu">
+                        <img src="../img/Camisetas/CamisetaNu.png" alt="Camiseta Nu" class="fotos">
                         <div class="produtosLine">
                             <button class="tamanhos">P</button>
                             <button class="tamanhos">M</button>
