--- a/pages/produtosB.html
+++ b/pages/produtosB.html
@@ -42,14 +42,14 @@
                 <ul>
                     <li><a href="produtos.html">Camisetas</a></li> <hr>
                     <li><a href="produtosC.html">Canecas</a></li> <hr>
-                    <li><a href="produtosB.html" class="produtoSelecionado">Bonés</a></li> <hr>
+                    <li><a href="produtosB.html" class="produtoSelecionado" class="fotos">Bonés</a></li> <hr>
                 </ul>
             </div>
             <div class="todosProdutos">
                 <div>
                     <div class="div1">
                         <p>Boné Forfun - Branco e Preto</p>
-                        <img src="../img/Bone/BoneForfun.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Bone/BoneForfun.png" alt="Camiseta Alegria Compartilhada" class="fotos">
                         <div class="bones">
                             <button class="comprar">COMPRAR</button>
                             <p class="preco">R$21,99</p>
@@ -58,7 +58,7 @@
 
                     <div class="div2">
                         <p>Boné Forfun - Preto</p>
-                        <img src="../img/Bone/BoneForfunPreto.png" alt="Camiseta Alegria Compartilhada">
+                        <img src="../img/Bone/BoneForfunPreto.png" alt="Camiseta Alegria Compartilhada" class="fotos">
                         <div class="bones">
                             <button class="comprar">COMPRAR</button>
                             <p class="preco">R$25,99</p>
@@ -68,7 +68,7 @@
             </div>
         </div>
         
-        <footer class="Footer">
+        <footer class="Footer footerMin">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
