--- a/pages/produtosC.html
+++ b/pages/produtosC.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="../styles/smallscreen.css">
         <link rel="stylesheet" media="screen and (min-width: 992px)" href="../styles/widescreen.css">
-        <link rel="stylesheet" href="../styles/widescreen.css">
+        <link rel="stylesheet" media="screen and (min-width: 600px) and (max-width: 992px)" href="../styles/style.css">
         <title>Forfun - Produtos</title>
     </head>
     <body>
@@ -38,7 +38,7 @@
         </header>
 
         <div class="produtos">
-            <div class="itens">
+            <div class="itens itensCaneca">
                 <ul>
                     <li><a href="produtos.html" >Camisetas</a></li> <hr>
                     <li><a href="produtosC.html" class="produtoSelecionado">Canecas</a></li> <hr>
@@ -48,7 +48,7 @@
             <div class="todosProdutos">
                 <div id="caneca">   
                     <p>Caneca Forfun</p>
-                    <img src="../img/Caneca/CanecaForfun.png" alt="CanecaForfun">
+                    <img src="../img/Caneca/CanecaForfun.png" alt="CanecaForfun" class="fotos">
                     <div class="produtosLine">
                         <br><button class="comprar">COMPRAR</button>
                         <p class="preco">R$12,99</p>
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <footer class="Footer">
+        <footer class="Footer footerMin">
             <p>&copy 2020</p>
             <a href="https://www.instagram.com/forfunoficial" target="_blank"><img src="../img/Contato/Instagram.png"></a>
             <a href="https://twitter.com/forfunoficial" target="_blank"><img src="../img/Contato/Twitter.png"></a>
